[gd_scene load_steps=14 format=2]

[ext_resource path="res://Game/Scripts/Main/Cards/BaseCardClass.gd" type="Script" id=1]
[ext_resource path="res://Game/Assets/Images/Experimental/Red.png" type="Texture" id=2]
[ext_resource path="res://Game/Assets/Images/Experimental/Blue.png" type="Texture" id=3]
[ext_resource path="res://Game/Assets/Images/Experimental/Yellow.png" type="Texture" id=4]
[ext_resource path="res://Game/Assets/Images/Experimental/Grey.png" type="Texture" id=5]
[ext_resource path="res://Game/Assets/Fonts/verdana.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Game/Assets/Fonts/arial.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Game/Assets/Images/Experimental/Black.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 5
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 72.3944, 101.297 )

[sub_resource type="Animation" id=4]
resource_name = "HoverGrow"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.75, 0.75 ), Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "HoverShrink"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 0.75, 0.75 ) ]
}

[node name="Card" type="KinematicBody2D"]
scale = Vector2( 0.75, 0.75 )
input_pickable = true
script = ExtResource( 1 )

[node name="BaseBackground" type="Sprite" parent="."]

[node name="Background" type="Sprite" parent="BaseBackground"]
position = Vector2( 3.59891, 5.71025 )
scale = Vector2( 1.42611, 1.61762 )
texture = ExtResource( 4 )

[node name="ColorBackground" type="Sprite" parent="."]

[node name="sample" type="Sprite" parent="ColorBackground"]
position = Vector2( 3.7184, 5.37084 )
scale = Vector2( 1.3386, 1.53592 )
texture = ExtResource( 2 )

[node name="PictureBackground" type="Sprite" parent="."]

[node name="Background" type="Sprite" parent="PictureBackground"]
position = Vector2( 6.65925, -19.9234 )
scale = Vector2( 0.996254, 0.546762 )
texture = ExtResource( 4 )

[node name="Picture" type="Sprite" parent="."]

[node name="secondSample" type="Sprite" parent="Picture"]
position = Vector2( 6.96084, -19.7096 )
scale = Vector2( 0.917593, 0.468101 )
texture = ExtResource( 3 )

[node name="DescriptionOrEffectBackground" type="Sprite" parent="."]

[node name="Background" type="Sprite" parent="DescriptionOrEffectBackground"]
position = Vector2( 5.36832, 45.4641 )
scale = Vector2( 1.16107, 0.644152 )
texture = ExtResource( 4 )

[node name="TextBackdrop" type="Sprite" parent="."]

[node name="TextBackdrop" type="Sprite" parent="TextBackdrop"]
position = Vector2( 5.43869, 45.2064 )
scale = Vector2( 1.09364, 0.558 )
texture = ExtResource( 5 )

[node name="TextBackdrop2" type="Sprite" parent="."]

[node name="TextBackdrop" type="Sprite" parent="TextBackdrop2"]
position = Vector2( 3.80201, -59.801 )
scale = Vector2( 1.32532, 0.237639 )
texture = ExtResource( 8 )

[node name="Name" type="Label" parent="."]
margin_left = -62.0
margin_top = -72.0
margin_right = 17.0
margin_bottom = -59.0
custom_fonts/font = SubResource( 1 )
text = "
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionOrEffect" type="Label" parent="."]
margin_left = -46.8982
margin_top = 18.965
margin_right = 58.1018
margin_bottom = 69.965
custom_fonts/font = SubResource( 2 )
text = "hello"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 2.76906, 6.78005 )
shape = SubResource( 3 )

[node name="CardAnimationPlayer" type="AnimationPlayer" parent="."]
anims/HoverGrow = SubResource( 4 )
anims/HoverShrink = SubResource( 5 )

[node name="CardAnimationTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
[connection signal="animation_finished" from="CardAnimationPlayer" to="." method="_on_CardAnimationPlayer_animation_finished"]
[connection signal="timeout" from="CardAnimationTimer" to="." method="_on_CardAnimationTimer_timeout"]
